public class Medio {
    private String tipo;

    public Medio(String tipo) {
        this.tipo = tipo;
    }
}