@startuml
hide members

interface Contenido
class Palabras
class Silencio
class Medio
class Mensaje
class Persona
class Conversacion
class Idioma

Palabras ..|> Contenido
Silencio ..|> Contenido

Conversacion o-- Persona
Conversacion *--  Mensaje
Mensaje *--  Contenido
Mensaje --> Medio

Persona ..> Idioma


@enduml